[package]
name = "tavern-keeper"
version = "0.1.0"
authors = ["RedEyedMars <greg_estouffey@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8",  features = ["max_level_debug", "release_max_level_warn"]}
failure = "0.1"
gl_generator = "0.14.0"
sdl2 = { version = "0.34.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
# auto_claw_render_gl_derive = { path = "render_gl_derive" }
vec-2-10-10-10 = "0.1"
soa_derive = "0.8.1"
half = "1.1.1"
image = "0.22.1"
rayon = "1.2.0"
rand = "0.7.3"

packed_simd_2 = "0.3.5"
generational-arena = "0.1"
maplit = "1.0.2"

map-macro = "0.2.6"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
walkdir = "2.1"
